changed display on header-link to inline block to fix wrapping on small screens

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,10 @@
   align-items: center;
 }
 
+.header-link {
+  display: inline-block;
+}
+
 .header-link:hover{
   text-decoration: underline;
 }
